--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-/datastructures-algorithms/*.classpath
-/datastructures-algorithms/*.gitignore
-/datastructures-algorithms/*.project
-/datastructures-algorithms/.settings/*.prefs
-/workspace/RemoteSystemsTempFiles/*.project
+*.classpath
+*.project
+*.prefs
